oscillators in mirsynth